# mcp-python-demo

./: .gitignore  README.md  client.py  hello.py  pyproject.toml  server.py
.devcontainer/: devcontainer.json
.github/workflows/: python.yaml
tests/: main_test.py
