[project]
name = "mcp-python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "UP", "A"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py311"]
